# drc-sim

./: .gitmodules  drc-info.py  install.sh  readme.md  setup.cfg
src/drcsim/scripts/: drc_sim_backend.py
src/drcsim/server/data/: args.py  config_general.py  resource.py
src/drcsim/server/ui/cli/: cli_main.py
src/drcsim/server/ui/gui/: gui_main.py
src/drcsim/server/ui/gui/frame/: frame_about.py  frame_get_key.py  frame_log.py  frame_run_server.py
src/drcsim/server/util/: drc_sim_c.py  interface_util.py  process_util.py  wpa_supplicant.py
src/drcsim/server/util/logging/: logger.py  logger_backend.py  logger_cli.py  logger_gui.py  logger_wpa.py
src/server/data/: constants.py
src/server/ui/cli/: cli_main.py
src/server/ui/gui/: gui_main.py
src/server/ui/gui/frame/: frame_get_key.py
src/server/util/: interface_util.py
