[metadata]
name = drcsim
version = 2.1.0
description = Wii U gamepad simulator.
authors = ["Dalton Durst <pypi@daltondurst.com>"]
license = "GPLv2+"
readme = "README.md"

[options]
package_dir=
    =src
packages = drcsim
include_package_data = True
install_requires =
    importlib-metadata
    netifaces>=0.10.5
    pexpect>=4.2.1
    distro>=1.0.4

[options.entry_points]
console_scripts =
    drc-sim-backend = drcsim.scripts.drc_sim_backend:main

[options.package_data]
'resources/config' = 'resources/config/get_psk.conf'
'resources/image' =
    'resources/image/clover.gif',
    'resources/image/diamond.gif',
    'resources/image/heart.gif',
    'resources/image/spade.gif',
    'resources/image/icon.gif'
'/usr/share/applications' = 'resources/bin/drcsimbackend.desktop'
'/usr/share/icons/hicolor/512x512/apps' = 'resources/image/drcsimbackend.png'
'/usr/share/polkit-1/actions' = 'resources/bin/com.rolandoislas.drcsim.server.policy'
